@@ -3,8 +3,8 @@ add_custom_command(
   OUTPUT "${VERSION_FILE}"
   COMMAND "${CMAKE_COMMAND}"
   -DVERSION_OUT_FILE="${VERSION_FILE}"
-  -DVERSION_IN_FILE="${radiance_SOURCE_DIR}/src/util/VERSION"
-  -P "${radiance_SOURCE_DIR}/src/common/create_version.cmake"
+  -DVERSION_IN_FILE="${radiance_SOURCE_DIR}/src/rt/VERSION"
+  -P "${radiance_SOURCE_DIR}/src/rt/create_version.cmake"
 )
 
 add_library(radiance
